# docs

./: .eslintrc.cjs  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  Docs.tsx  Routes.tsx  desktop.ts  electron.tsx  main.tsx  selectors.ts  setup.tsx  states.ts  store.ts
src-electron/: README.md  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
src-electron/src/main/: index.ts
src-electron/src/preload/: index.d.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/apps/: index.ts
src/apps/Docs/: DocsApp.tsx  Routes.tsx  index.ts  selectors.ts  utils.ts
src/apps/IconLibrary/: Group.tsx  Icon.tsx  IconLibrary.tsx  Menu.tsx  icons.ts  index.ts
src/components/: index.ts
src/components/ComponentGroup/: ComponentGroup.tsx
src/components/ExampleGroup/: Code.tsx  ExampleGroup.tsx  ExampleGroupCode.tsx  index.ts
src/containers/: index.ts
src/containers/DocsHeaderbar/: DocsHeaderbar.tsx  GithubIcon.tsx
src/containers/DocsSidebar/: DocsSidebar.tsx  ListItemLink.tsx
src/demo/: Basic.tsx  Extended.tsx  index.ts
src/images/: sources.md
src/pages/: Buttons.tsx  Card.tsx  Checkbox.tsx  Dialog.tsx  Entry.tsx  Header.tsx  HeaderBar.tsx  Icons.tsx  Item.tsx  Lists.tsx  Message.tsx  Notify.tsx  Progress.tsx  Radio.tsx  Rows.tsx  Select.tsx  Slider.tsx  Tabs.tsx  Toggle.tsx  Typography.tsx  View.tsx  index.ts
src/styles/: _code.scss  _component-variant-group.scss  _example-group.scss  _fonts.scss  _home.scss  _icon-library.scss  _layout.scss  _sidebar.scss  index.scss
(+451 files in other folders)
